# APUE

 strfprint/: CMakeLists.txt
FILE/: CMakeLists.txt  main.cpp
IPC/: recv_fd.cpp  recv_fd2.cpp  send_err.cpp  send_fd.cpp  send_fd2.cpp
IPC/open/server2/: CMakeLists.txt  main.cpp
Non-blocking_IO/: CMakeLists.txt  main.cpp
Orphan_process_group/: CMakeLists.txt  main.cpp
SIGTSTP/: CMakeLists.txt  main.cpp
TMP/: CMakeLists.txt  main.cpp
UnixDomainSocket/: cli_conn.cpp  serv_accept.cpp  serv_listen.cpp
access/: CMakeLists.txt  main.cpp
alarm/: CMakeLists.txt  main.cpp
alarm2/: CMakeLists.txt  main.cpp
alarm3/: CMakeLists.txt  main.cpp
asio/: CMakeLists.txt  main.cpp
atexit/: CMakeLists.txt  main.cpp
barrier/: CMakeLists.txt  main.cpp
chmod/: CMakeLists.txt  main.cpp
clone/: CMakeLists.txt  main.cpp
compute/: CMakeLists.txt  main.cpp
condition_variable/: CMakeLists.txt  main.cpp
coprocess/: CMakeLists.txt  main.cpp
coprocess2/: CMakeLists.txt  main.cpp
coprocess3/: CMakeLists.txt  main.cpp
daemonize/: CMakeLists.txt  main.cpp
deadlock/: CMakeLists.txt  main.cpp
exec/: CMakeLists.txt  main.cpp
fflush/: CMakeLists.txt  main.cpp
fgets/: CMakeLists.txt  fgets.cpp  fgets.h
filetype/: CMakeLists.txt  main.cpp
fmen/: CMakeLists.txt  main.cpp
fork/: CMakeLists.txt  main.cpp
fork2/: CMakeLists.txt  main.cpp
futimens/: CMakeLists.txt  main.cpp
getaddrinfo/: CMakeLists.txt  main.cpp
getc/: CMakeLists.txt  getc.cpp  getc.h
getopt/: CMakeLists.txt  main.cpp
lib/: recvfd.cpp  (+2 more)
network/server2/: CMakeLists.txt  server2.cpp
(+106 files in other folders)
